--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -14,7 +14,7 @@
    
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
-            <<a class="navbar-brand" href="/home"><img src="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742945/stork_logo-removebg-preview_vxpfhs.png" width="60" height="60">TextUtils</a>
+            <a class="navbar-brand" href="/home"><img src="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742945/stork_logo-removebg-preview_vxpfhs.png" width="60" height="60">TextUtils</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
