Revised the fucntionality of buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,37 +59,37 @@
 
             <div class="form-check form-switch">
                 <input name="uppercase" class="form-check-input" type="checkbox" role="switch"
-                    id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">UPPERCASE</label>
+                    id="flexSwitchCheckDefault-UpperCase">
+                <label class="form-check-label" for="flexSwitchCheckDefault-UpperCase">UPPERCASE</label>
             </div>
 
             <div class="form-check form-switch">
                 <input name="propercase" class="form-check-input" type="checkbox" role="switch"
-                    id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Proper Case</label>
+                    id="flexSwitchCheckDefault-propercase">
+                <label class="form-check-label" for="flexSwitchCheckDefault-propercase">Proper Case</label>
             </div>
 
             <div class="form-check form-switch">
                 <input name="sentencecase" class="form-check-input" type="checkbox" role="switch"
-                    id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Sentence Case</label>
+                    id="flexSwitchCheckDefault-sentencecase">
+                <label class="form-check-label" for="flexSwitchCheckDefault-sentencecase">Sentence Case</label>
             </div>
 
             <div class="form-check form-switch">
                 <input name="lowercase" class="form-check-input" type="checkbox" role="switch"
-                    id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">lowercase</label>
+                    id="flexSwitchCheckDefault-lowercase">
+                <label class="form-check-label" for="flexSwitchCheckDefault-lowercase">lowercase</label>
             </div>
 
             <div class="form-check form-switch">
-                <input name="trim" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Trim Extra White Spaces</label>
+                <input name="trim" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault-trim">
+                <label class="form-check-label" for="flexSwitchCheckDefault-trim">Trim Extra White Spaces</label>
             </div>
 
             <div class="form-check form-switch">
                 <input name="newlineremover" class="form-check-input" type="checkbox" role="switch"
-                    id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">New Line Remover</label>
+                    id="flexSwitchCheckDefault-newlineremove">
+                <label class="form-check-label" for="flexSwitchCheckDefault-newlineremove">New Line Remover</label>
             </div>
 
 
